Bug 304541 - dolphin doesn't detect correct 'Places' place when opening directories
Summary: dolphin doesn't detect correct 'Places' place when opening directories
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: panels: places (other bugs)
Version First Reported In: 2.1
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Frank Reininghaus
URL: http://i.imgur.com/aVgs3.png
Keywords:
Depends on:
Blocks:
 
Reported: 2012-08-04 10:48 UTC by Denis M. (Phr33d0m)
Modified: 2012-08-23 20:08 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Denis M. (Phr33d0m) 2012-08-04 10:48:13 UTC
Hello, it seems that if you call dolphin to open a directory and the directory is listed in your Places/Devices - it ignores it and selected the first option from the list.
Please see the picture in the URL field for the example.

Reproducible: Always

Steps to Reproduce:
1. Insert a pendrive.
2. Using the device manager, click to open the folder.
3. It opens the folder with dolphin, but instead Devices->pendrive to be selected you get Devices->Home


Expected Results:  
Dolphin should always select the directory from favorites when such folder is accessed.

The expected behaviour described here is how dolphin has worked since now. Is this a change conciously made?

Regards.
Comment 1 Janet 2012-08-04 16:02:51 UTC
Well, I guess my observation matches this...

Since KDE SC 4.9 the places sidebar doesn't change the selected place anymore when I switch to a folder in another range. E.g. when I  choose the root folder via the places panel, this "place" is highlighted in the panel. Then I open ~/something via addressbar- and the places panel stays at the root folder. Expected behaviour is that it now should highlight the home folder, as it was in dolphin of KDE SC 4.8 and before.

Screenshot: http://bugsfiles.kde.org/attachment.cgi?id=72955 (discovered it while taking a screenshot for another bug).
Comment 2 Frank Reininghaus 2012-08-07 09:42:23 UTC
Thanks for the bug report, I can confirm this issue.
Comment 3 Emmanuel Pescosta 2012-08-18 13:19:49 UTC
review-request: https://bugs.kde.org/show_bug.cgi?id=304541
Comment 4 Emmanuel Pescosta 2012-08-18 13:21:14 UTC
(In reply to comment #3)
> review-request: https://bugs.kde.org/show_bug.cgi?id=304541
sry wrong url, use this url instead: https://git.reviewboard.kde.org/r/106074
Comment 5 Denis M. (Phr33d0m) 2012-08-18 14:09:14 UTC
Hello, I can confirm that the patch provided by emmanuel099 fixes this bug for me.
Thanks.

PD: I'm not sure if I should mark this bug as RESOLVED myself or let a KDE dev do it after a revision?
Comment 6 Jekyll Wu 2012-08-18 14:27:30 UTC
The patch is not reviewed and merged yet, so there is no reason to close this report now.
Comment 7 Jekyll Wu 2012-08-18 14:35:26 UTC
The patch is not reviewed and merged yet, so there is no reason to close this report now.
Comment 8 Emmanuel Pescosta 2012-08-23 19:54:41 UTC
Git commit 1ec8de2c619006e3fe997fbf6074035d65dea6c5 by Emmanuel Pescosta.
Committed on 18/08/2012 at 15:11.
Pushed by emmanuelp into branch 'master'.

Select the correct item in places-panel, when a directory is opened.
REVIEW: 106074

M  +10   -0    dolphin/src/panels/places/placespanel.cpp

http://commits.kde.org/kde-baseapps/1ec8de2c619006e3fe997fbf6074035d65dea6c5
Comment 9 Emmanuel Pescosta 2012-08-23 20:08:01 UTC
Git commit 78dd4c9ce96d29fb2493279c42009270c44bceb3 by Emmanuel Pescosta.
Committed on 18/08/2012 at 15:11.
Pushed by emmanuelp into branch 'KDE/4.9'.

Select the correct item in places-panel, when a directory is opened.
REVIEW: 106074
FIXED-IN: 4.9.1
(cherry picked from commit 1ec8de2c619006e3fe997fbf6074035d65dea6c5)

M  +10   -0    dolphin/src/panels/places/placespanel.cpp

http://commits.kde.org/kde-baseapps/78dd4c9ce96d29fb2493279c42009270c44bceb3