Select the correct item in places-panel, when a directory is opened.

BUG: 304541
REVIEW: 106074
FIXED-IN: 4.9.1
(cherry picked from commit 1ec8de2c619006e3fe997fbf6074035d65dea6c5)